# GitTree

./: README.md  meson.build
builddir/: build.ninja  compile_commands.json
builddir/meson-logs/: meson-log.txt
data/: com.github.saisuryakat.gittree.appdata.xml.in  com.github.saisuryakat.gittree.desktop.in
debian/: changelog  control  copyright
po/: POTFILES  com.github.saisuryakat.gittree.pot  meson.build
src/: Application.vala  Main.vala  MainWindow.vala  meson.build
src/Layouts/: WelcomeView.vala
src/Models/: GitRepository.vala
src/Services/: DatabaseService.vala
src/Views/: HeaderBarView.vala  HostingServicesView.vala  NewTab.vala  NewTabView.vala  RecentsView.vala  RepositoriesView.vala  WelcomeView.vala
